--- a/.. MediaCreationTool.bat ..md
+++ b/.. MediaCreationTool.bat ..md
@@ -4,16 +4,16 @@ A powerful yet simple windows 1X deployment automation tool as well!
 
 > awesome gui dialogs to pick windows version and preset action  
 > **Auto Setup** choice for upgrade directly without prompts, with edition change / intelligent fallback  
-> **Create ISO** choice for authoring iso file directly via DIR2ISO snippet, including any 'oem' customizations  
-> **Create USB** choice for authoring usb via native MCT, including any 'oem' customizations (prompts once)  
-> **Select in MCT** choice for vanilla MCT processing without 'oem' modifications, script quits straightway  
+> **Create ISO** choice for authoring iso file directly via DIR2ISO snippet, including any 'oem' customization  
+> **Create USB** choice for authoring usb via native MCT, including any 'oem' customization (prompts once)  
+> **Select in MCT** choice for vanilla MCT processing without 'oem' customization, script quits straightway  
 > control via set script vars, commandline parameters or rename script like `iso 21H2 Pro MediaCreationTool.bat`  
 > set recommended windows setup options that give the least amount of issues when doing upgrades  
 > pickup `$OEM$` folder with post setup tweaks like `$OEM$\$$\Setup\Scripts\` `setupcomplete.cmd` or `OOBE.cmd`  
 > write `sources\PID.txt` file to preselect edition at media boot or windows setup  
 > write `auto.cmd` file to run auto setup without prompts from media, on demand  
 > 11: Skip TPM Check on media boot via winpeshl.ini file (cleaner than altering system hive directly)  
-> 11: Skip TPM Check on dynamic update - system-wide (works for insider previews), also as standalone toggle script  
+> 11: Skip TPM Check on dynamic update v2 - system-wide (works for insider preview), also as standalone toggle script  
 
 [discuss on MDL](https://forums.mydigitallife.net/forums/windows-10.54/)  
 
@@ -47,6 +47,7 @@ A powerful yet simple windows 1X deployment automation tool as well!
             with Skip TPM Check on media boot as well as on dynamic update (standalone toggle script available)
             final touches for improved script reliability; enhanced auto upgrade preset; win 7 powershell 2.0 compatible
 2021.09.30: fix Auto Setup preset not launching.. automatically
+2021.10.04: fix for long standing tr localization quirks; Skip TPM Check v2 (ifeo-based instead of wmi)
 ```
 
 _use `download ZIP` button or pastebin link to get the script, as saving the Raw file breaks line endings_  
