--- a/.. MediaCreationTool.bat ..md
+++ b/.. MediaCreationTool.bat ..md
@@ -1,19 +1,27 @@
 Not just an Universal MediaCreationTool wrapper script with ingenious support for business editions,  
 ![Preview](https://i.imgur.com/swCwiDi.png)  
-A powerful yet simple windows 1X deployment automation tool as well!  
+A powerful yet simple windows 10 / 11 deployment automation tool as well!  
 
-> awesome gui dialogs to pick windows version and preset action  
-> **Auto Setup** choice for upgrade directly without prompts, with edition change / intelligent fallback  
-> **Create ISO** choice for authoring iso file directly via DIR2ISO snippet, including any 'oem' customization  
-> **Create USB** choice for authoring usb via native MCT, including any 'oem' customization (prompts once)  
-> **Select in MCT** choice for vanilla MCT processing without 'oem' customization, script quits straightway  
-> control via set script vars, commandline parameters or rename script like `iso 21H2 Pro MediaCreationTool.bat`  
-> set recommended windows setup options that give the least amount of issues when doing upgrades  
-> pickup `$OEM$` folder with post setup tweaks like `$OEM$\$$\Setup\Scripts\` `setupcomplete.cmd` or `OOBE.cmd`  
-> write `sources\PID.txt` file to preselect edition at media boot or windows setup  
-> write `auto.cmd` file to run auto setup without prompts from media, on demand  
-> 11: Skip TPM Check on media boot via winpeshl.ini file (cleaner than altering system hive directly)  
-> 11: Skip TPM Check on dynamic update v2 - system-wide (works for insider preview), also as standalone toggle script  
+> configure via set vars, commandline parameters or rename script like `iso 21H2 Pro MediaCreationTool.bat`  
+> recommended windows setup options with the least amount of issues on upgrades already set  
+> awesome keyboard focus dialogs to pick windows version and enhanced preset action  
+
+> **Auto Setup** for upgrading directly with the auto-detected Edition, Language, Architecture *  
+> _- can troubleshoot auto setup failing by adding `no_update` to script name_  
+> **Create ISO** for making iso file directly with the auto-detected Edition, Language, Architecture *  
+> _- can override auto-detected by adding edition name / language / arch to script name_  
+> **Create USB** for making usb after a confirmation with the auto-detected Edition, Language, Architecture *  
+> with 'oem' media customization - disable by adding `no_oem` to script name  
+> _- pickup `$OEM$` folder (if it exists) with any post setup tweaks like `$OEM$\$$\Setup\Scripts\setupcomplete.cmd`_  
+> _- write `sources\PID.txt` file to preselect edition at media boot or setup within windows (if configured)_  
+> _- write `auto.cmd` file to re-run auto setup on demand, from media (includes Skip TPM if 11)_  
+> _- write `winpeshl.ini` file in boot.wim to Skip TPM Check on media boot (if 11)_  
+> **Select in MCT** _for manually confirming everything in MCT GUI  
+> without 'oem' media customization, script passes products.xml configuration and quits straightway  
+
+> Skip TPM Check on Dynamic Update v1 _(wmi-based)_ or v2 _(ifeo-based)_ standalone toggle script for windows 11  
+> _- system-wide, unblocks insider previews on windows update, or running setup.exe manually while online_  
+> _- when using created media on another pc for the first time, can launch `auto.cmd` from media once to enable_  
 
 [discuss on MDL](https://forums.mydigitallife.net/forums/windows-10.54/)  
 
