--- a/.. MediaCreationTool.bat ..md
+++ b/.. MediaCreationTool.bat ..md
@@ -56,6 +56,7 @@ A powerful yet simple windows 10 / 11 deployment automation tool as well!
             final touches for improved script reliability; enhanced auto upgrade preset; win 7 powershell 2.0 compatible
 2021.09.30: fix Auto Setup preset not launching.. automatically
 2021.10.04: fix for long standing tr localization quirks; Skip TPM Check v2 (ifeo-based instead of wmi)
+2021.10.05: 11 22000.194 Release (rofl W11 MCT has limited capabilities, so still using 21H1 MCT because it works fine) 
 ```
 
 _use `download ZIP` button or pastebin link to get the script, as saving the Raw file breaks line endings_  
