Update .. MediaCreationTool.bat ..md
https://github.com/AveYo/MediaCreationTool.bat

--- a/.. MediaCreationTool.bat ..md
+++ b/.. MediaCreationTool.bat ..md
@@ -1,4 +1,6 @@
 _We did it! We broke gist.github.com_ ;) [So head over to the new home!](https://github.com/AveYo/MediaCreationTool.bat) **Thank you all!**
+**2021.10.20:** [https://github.com/AveYo/MediaCreationTool.bat](https://github.com/AveYo/MediaCreationTool.bat) now open for interaction
+- new update introducing no 11 setup checks on boot in VirtualBox 
 
 Not just an Universal MediaCreationTool wrapper script with ingenious support for business editions,  
 ![Preview](https://i.imgur.com/swCwiDi.png)  
